--- a/views/posts.ejs
+++ b/views/posts.ejs
@@ -10,28 +10,32 @@
                   <img src="<%= profile %>" class="p-3" alt="" style="width: 80px; height: 80px; object-fit: cover; border-radius: 50%;">
                   <textarea class="form-control p-2 border border-light" name="content" placeholder="What's on your plant?" required></textarea>
               </div>
-              <div class="d-flex">
-                  <img src="<%= profile %>" alt="" style="width: 80px; height: 20px; opacity: 0;">
+              <div class="d-flex align-items-center justify-content-between">
+                <div class="d-flex align-items-center">
+                  <img src="" alt="" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 10px; opacity: 0;">
+  
+                  <img id="preview" src="<%= profile %>" alt="" style="width: 80px; height: 80px; border-radius: 50%; object-fit: cover; margin-right: 10px; opacity: 0; display: none;">
+                  
                   <label for="image" style="background: linear-gradient(to right, #f0e68c, #f0a1a8); padding: 7px; cursor: pointer; color: #fff; border-radius: 100px;">
                       <i class="fas fa-image"></i> Choose Image
                   </label>
                   <input type="file" id="image" class="form-control" name="image" accept="image/*" style="display: none;">
-                  <select name="category" class="border border-light p-2 gray-text" style="background-color:#CDE1FF; padding: 7px; cursor: pointer; border-radius: 100px;">
+                  
+                  <select name="category" class="border border-light p-2 gray-text" style="background-color:#CDE1FF; padding: 7px; cursor: pointer; border-radius: 100px; margin-left: 10px;" required>
                       <option value="">Categories</option>
                       <option value="Health">Health</option>
                       <option value="Plants">Plants</option>
                       <option value="Recipes">Recipes</option>
                   </select>
               </div>
-          </div>
-      
-          <div class="d-flex mt-4 py-4">
-              <img src="<%= profile %>" alt="" style="width: 80px; height: 20px; opacity: 0;">
-              <button type="submit" class="btn btn-primary">Post</button>
+              <div class="px-4">
+                <button type="submit" class="btn text-white" style="background-color: #43B5E5;" >Post</button>
+              </div>
+            </div>
           </div>
       </form>
-      
         <br>
+        
         <% function formatContent(content, maxLength) { %>
           <% if (content.length > maxLength) { %>
               <%- content.substring(0, maxLength).replace(/\n/g, '<br>') + '<strong>...See more</strong>' %>
@@ -223,6 +227,20 @@
         }
       });
     });
+
+    $('#image').on('change', function(event) {
+            const file = event.target.files[0];
+            if (file) {
+                const reader = new FileReader();
+                reader.onload = function(e) {
+                    $('#preview').attr('src', e.target.result).css({'opacity': '1', 'display': 'block'});
+                };
+                reader.readAsDataURL(file);
+            } else {
+                // Hide the image preview if no file is selected
+                $('#preview').attr('src', '').css({'opacity': '0', 'display': 'none'});
+            }
+        });
 
     function updateLikeButton(button, isLiked) {
       if (isLiked) {
