--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -662,6 +662,34 @@ a{
         justify-content: center;
         align-items: center;
     }
+     /* Gray overlay background */
+     #overlay {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        background-color: rgba(0, 0, 0, 0.5); /* Semi-transparent gray */
+        z-index: 1040; /* Below the notification */
+        display: none; /* Initially hidden */
+    }
+
+    /* Notification styles */
+    #successHarvestNotification.show {
+        opacity: 1;
+    }
+
+    #successHarvestNotification {
+        opacity: 0;
+        transition: opacity 0.5s;
+        position: fixed;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%, -50%);
+        z-index: 1050;
+        text-align: center;
+        width: 300px;
+    }
 /*  */
 
 
@@ -826,3 +854,4 @@ a{
   
 
 /*  */
+
