--- a/views/partials/LoginFooter.ejs
+++ b/views/partials/LoginFooter.ejs
@@ -1,12 +1,30 @@
 
+    
+    
+    <!-- <div id="spinner" class="spinner-container"
+    style="display: none; position: fixed;
+    top: 0;            
+    left: 0;          
+    width: 100%;       
+    height: 100%;       
+    background-color: rgba(255, 255, 255, 0.8);
+    display: flex;      
+    justify-content: center;
+    align-items: center;
+    z-index: 9999;">
+
+    <div class="spinner">
+          <img src="/images/spinner.svg" alt="" width="100px"/>
+      </div>
+    </div> -->
 
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 
   <script src="/js/register.js"></script>
-  
-    </body>
+
+  </body>
   
     
-    </html>
+</html>
