fix post layout

--- a/public/styles/user.css
+++ b/public/styles/user.css
@@ -555,12 +555,7 @@ a{
     max-width: 1300px;
 }
 .best-to-plant{
-    position: absolute;
-    left: 50%;
-    top: 48px;
-    transform: translateX(-50%);
-    background-color: #E3E6E5;
-    padding: 0 20px 0;
+    text-align: center;
 }
 .rounded-image-container{
     box-shadow: #555252 0 0 15px 1px;
@@ -855,3 +850,77 @@ a{
 
 /*  */
 
+
+/* LIBRARY */
+.card-notification {
+    width: 330px;
+    height: 80px;
+    border-radius: 8px;
+    box-sizing: border-box;
+    padding: 10px 15px;
+    background-color: #ffffff;
+    box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
+    position: relative;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    gap: 15px;
+  }
+  .wave {
+    position: absolute;
+    transform: rotate(90deg);
+    left: -31px;
+    top: 32px;
+    width: 80px;
+    fill: #04e4003a;
+  }
+  .icon-container {
+    width: 35px;
+    height: 35px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: #04e40048;
+    border-radius: 50%;
+    margin-left: 8px;
+  }
+  .icon {
+    width: 17px;
+    height: 17px;
+    color: #269b24;
+  }
+  .message-text-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    flex-grow: 1;
+  }
+  .message-text,
+  .sub-text {
+    margin: 0;
+    cursor: default;
+  }
+  .message-text {
+    color: #269b24;
+    font-size: 17px;
+    font-weight: 700;
+  }
+  .sub-text {
+    font-size: 14px;
+    color: #555;
+  }
+  .cross-icon {
+    width: 18px;
+    height: 18px;
+    color: #555;
+    cursor: pointer;
+  }
+  
+
+/*  */
+
+.sideNav a img{
+    width: 25px;
+}
