--- a/views/partials/UserHeader.ejs
+++ b/views/partials/UserHeader.ejs
@@ -15,7 +15,7 @@
 
     <link rel="icon" type="image/x-icon" href="/images/logo-user.svg">
 
-    <link rel="stylesheet" href="./styles/user.css">
+    <link rel="stylesheet" href="/styles/user.css">
 
     <!-- FIREBASE -->
     <script src="https://www.gstatic.com/firebasejs/8.10.0/firebase-app.js"></script>
@@ -29,7 +29,7 @@
             <div class="sidebar-heading d-flex justify-content-center">
                 <img src="/images/logo-user.svg" alt="" style="width: 40px;">
             </div>
-            <div class="list-group list-group-flush d-grid gap-3 mt-4">
+            <div class="list-group list-group-flush d-grid gap-3 mt-4 sideNav">
                 <a href="/dashboard" class="side-nav-item text-white"><img src="/images/Dashboard-nav.svg" alt="" width="30px"></a>
                 <a href="/add-new-plant" class="side-nav-item text-white"><img src="/images/add-plant.svg" alt=""></a>
                 <a href="/plant-identification" class="side-nav-item text-white"><img src="/images/scan-helper.svg" alt=""></a>
@@ -42,16 +42,15 @@
 
         <div id="page-content-wrapper" >
             <div style="background-color: #59A645;">
-            <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between align-items-center px-3" style="background-color: #E3E6E5; border-top-left-radius: 40px;">
+            <nav class="navbar navbar-expand-lg navbar-light d-flex justify-content-between align-items-center px-3" style="background-color: #ffffff; border-top-left-radius: 40px;">
                 <div class="d-flex">
                     <div>
                         <button id="menu-toggle" class="btn">
                             <i class="fas fa-bars" id="menuIcon"></i>
                         </button>
                     </div>
-                    <div class="d-flex align-items-center">
-                        <p id="page-title"  class="h4 m-0 fw-bold nexa-black bread-crumbs">DASHBOARD</p>
-                    </div>
+
+
                     
                 </div>
                 <div class="d-flex align-items-center">
@@ -113,6 +112,10 @@
                 
                 
             </div>   
+
+            <div class="px-2">
+                <p id="page-title" class="nexa-black bread-crumbs m-0"></p>
+            </div>
 
             <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
             <script>
